--- a/templates/parts/clock-clip-paths.hbs
+++ b/templates/parts/clock-clip-paths.hbs
@@ -1,190 +1,179 @@
-<svg viewBox="0 0 400 400" width="0" height="0">
+<svg>
 	<defs>
-		<clipPath id="clockClip-12-12">
-			<circle cx="200" cy="200" r="200" />
+		<clipPath id="clockClip-12-12"  clipPathUnits="objectBoundingBox">
+			<circle cx="0.5" cy="0.5" r="0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-11">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400
-			s-70.59-9.75-100.01-26.77c-30.35-17.56-55.66-42.87-73.22-73.22C9.75,270.59,0,236.44,0,200s9.75-70.59,26.77-100.01
-			c17.56-30.35,42.87-55.66,73.22-73.22L200,200V0c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22
-			C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-11"  clipPathUnits="objectBoundingBox">
+			<path d="M1,0.5 c0,0.091,-0.024,0.176,-0.067,0.25 c-0.044,0.076,-0.107,0.139,-0.183,0.183 C0.676,0.976,0.591,1,0.5,1 s-0.176,-0.024,-0.25,-0.067 c-0.076,-0.044,-0.139,-0.107,-0.183,-0.183 C0.024,0.676,0,0.591,0,0.5 s0.024,-0.176,0.067,-0.25 c0.044,-0.076,0.107,-0.139,0.183,-0.183 L0.5,0.5 V0 c0.091,0,0.176,0.024,0.25,0.067 c0.076,0.044,0.139,0.107,0.183,0.183 C0.976,0.324,1,0.409,1,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-10">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400
-			s-70.59-9.75-100.01-26.77c-30.35-17.56-55.66-42.87-73.22-73.22C9.75,270.59,0,236.44,0,200s9.75-70.59,26.77-100.01L200,200V0
-			c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-10"  clipPathUnits="objectBoundingBox">
+			<path d="M1,0.5 c0,0.091,-0.024,0.176,-0.067,0.25 c-0.044,0.076,-0.107,0.139,-0.183,0.183 C0.676,0.976,0.591,1,0.5,1 s-0.176,-0.024,-0.25,-0.067 c-0.076,-0.044,-0.139,-0.107,-0.183,-0.183 C0.024,0.676,0,0.591,0,0.5 s0.024,-0.176,0.067,-0.25 L0.5,0.5 V0 c0.091,0,0.176,0.024,0.25,0.067 c0.076,0.044,0.139,0.107,0.183,0.183 C0.976,0.324,1,0.409,1,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-9">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400
-			s-70.59-9.75-100.01-26.77c-30.35-17.56-55.66-42.87-73.22-73.22C9.75,270.59,0,236.44,0,200h200V0
-			c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-9"  clipPathUnits="objectBoundingBox">
+			<path d="M1,0.5 c0,0.091,-0.024,0.176,-0.067,0.25 c-0.044,0.076,-0.107,0.139,-0.183,0.183 C0.676,0.976,0.591,1,0.5,1 s-0.176,-0.024,-0.25,-0.067 c-0.076,-0.044,-0.139,-0.107,-0.183,-0.183 C0.024,0.676,0,0.591,0,0.5 h0.5 V0 c0.091,0,0.176,0.024,0.25,0.067 c0.076,0.044,0.139,0.107,0.183,0.183 C0.976,0.324,1,0.409,1,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-8">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400
-			s-70.59-9.75-100.01-26.77c-30.35-17.56-55.66-42.87-73.22-73.22L200,200V0c36.44,0,70.59,9.75,100.01,26.77
-			c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-8"  clipPathUnits="objectBoundingBox">
+			<path d="M1,0.5 c0,0.091,-0.026,0.176,-0.072,0.25 c-0.047,0.076,-0.115,0.139,-0.196,0.183 C0.725,0.976,0.633,1,0.536,1 s-0.189,-0.024,-0.268,-0.067 c-0.081,-0.044,-0.149,-0.107,-0.196,-0.183 L0.536,0.5 V0 c0.098,0,0.189,0.024,0.268,0.067 c0.081,0.044,0.149,0.107,0.196,0.183 C1,0.324,1,0.409,1,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-7">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400
-			s-70.59-9.75-100.01-26.77L200,200V0c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22
-			C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-7"  clipPathUnits="objectBoundingBox">
+			<path d="M1,0.5 c0,0.091,-0.032,0.176,-0.089,0.25 c-0.059,0.076,-0.143,0.139,-0.244,0.183 C0.902,0.976,0.788,1,0.667,1 s-0.235,-0.024,-0.333,-0.067 L0.667,0.5 V0 c0.121,0,0.235,0.024,0.333,0.067 c0.101,0.044,0.186,0.107,0.244,0.183 C1,0.324,1,0.409,1,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-6">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22C270.59,390.25,236.44,400,200,400V0
-			c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-6"  clipPathUnits="objectBoundingBox">
+			<path d="M2,0.5 c0,0.091,-0.049,0.176,-0.134,0.25 c-0.088,0.076,-0.214,0.139,-0.366,0.183 C1,0.976,1,1,1,1 V0 c0.182,0,0.353,0.024,0.5,0.067 c0.152,0.044,0.278,0.107,0.366,0.183 C1,0.324,2,0.409,2,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-5">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01c-17.56,30.35-42.87,55.66-73.22,73.22L200,200V0
-			c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-5"  clipPathUnits="objectBoundingBox">
+			<path d="M2,0.536 c0,0.098,-0.049,0.189,-0.134,0.268 c-0.088,0.081,-0.214,0.149,-0.366,0.196 L1,0.536 V0 c0.182,0,0.353,0.026,0.5,0.072 c0.152,0.047,0.278,0.115,0.366,0.196 C1,0.347,2,0.438,2,0.536" />
 		</clipPath>
-		<clipPath id="clockClip-12-4">
-			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01L200,200V0c36.44,0,70.59,9.75,100.01,26.77
-			c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+		<clipPath id="clockClip-12-4"  clipPathUnits="objectBoundingBox">
+			<path d="M2,0.667 c0,0.121,-0.049,0.235,-0.134,0.333 L1,0.667 V0 c0.182,0,0.353,0.032,0.5,0.089 c0.152,0.059,0.278,0.143,0.366,0.244 C1,0.431,2,0.545,2,0.667" />
 		</clipPath>
-		<clipPath id="clockClip-12-3">
+		<clipPath id="clockClip-12-3"  clipPathUnits="objectBoundingBox">
 			<path
-				d="M400,200H200V0c36.44,0,70.59,9.75,100.01,26.77c30.35,17.56,55.66,42.87,73.22,73.22C390.25,129.41,400,163.56,400,200z" />
+				d="M2,1 H1 V0 c0.182,0,0.353,0.049,0.5,0.134 c0.152,0.088,0.278,0.214,0.366,0.366 C1,0.647,2,0.818,2,1" />
 		</clipPath>
-		<clipPath id="clockClip-12-2">
-			<path d="M373.23,99.99L200,200V0c36.44,0,70.59,9.75,100.01,26.77C330.36,44.33,355.67,69.64,373.23,99.99z" />
+		<clipPath id="clockClip-12-2"  clipPathUnits="objectBoundingBox">
+			<path d="M2,0.5 L1,1 V0 c0.21,0,0.407,0.049,0.577,0.134 C1,0.222,2,0.348,2,0.5" />
 		</clipPath>
-		<clipPath id="clockClip-12-1">
-			<path d="M300.014,26.771C270.593,9.748,236.436,0,200,0v200L300.014,26.771z" />
+		<clipPath id="clockClip-12-1"  clipPathUnits="objectBoundingBox">
+			<path d="M3,0.134 C2,0.049,2,0,2,0 v1 L3,0.134" />
 		</clipPath>
-		<clipPath id="clockClip-10-10">
-			<circle cx="200" cy="200" r="200" />
+		<clipPath id="clockClip-10-10"  clipPathUnits="objectBoundingBox">
+			<circle cx="0.5" cy="0.5" r="0.5" />
 		</clipPath>
-		<clipPath id="clockClip-10-9">
+		<clipPath id="clockClip-10-9"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98c-33,24.02-73.62,38.2-117.56,38.2
 			s-84.56-14.18-117.56-38.2c-33.75-24.56-59.52-59.43-72.69-99.98C3.43,242.35,0,221.58,0,200c0-21.58,3.43-42.35,9.75-61.82
 			C22.92,97.63,48.69,62.76,82.44,38.2L200,200V0c43.94,0,84.56,14.18,117.56,38.2c33.75,24.56,59.52,59.43,72.69,99.98
 			C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-8">
+		<clipPath id="clockClip-10-8"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98c-33,24.02-73.62,38.2-117.56,38.2
 			s-84.56-14.18-117.56-38.2c-33.75-24.56-59.52-59.43-72.69-99.98C3.43,242.35,0,221.58,0,200c0-21.58,3.43-42.35,9.75-61.82
 			L200,200V0c43.94,0,84.56,14.18,117.56,38.2c33.75,24.56,59.52,59.43,72.69,99.98C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-7">
+		<clipPath id="clockClip-10-7"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98c-33,24.02-73.62,38.2-117.56,38.2
 			s-84.56-14.18-117.56-38.2c-33.75-24.56-59.52-59.43-72.69-99.98L200,200V0c43.94,0,84.56,14.18,117.56,38.2
 			c33.75,24.56,59.52,59.43,72.69,99.98C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-6">
+		<clipPath id="clockClip-10-6"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98c-33,24.02-73.62,38.2-117.56,38.2
 			s-84.56-14.18-117.56-38.2L200,200V0c43.94,0,84.56,14.18,117.56,38.2c33.75,24.56,59.52,59.43,72.69,99.98
 			C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-5">
+		<clipPath id="clockClip-10-5"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98c-33,24.02-73.62,38.2-117.56,38.2V0
 			c43.94,0,84.56,14.18,117.56,38.2c33.75,24.56,59.52,59.43,72.69,99.98C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-4">
+		<clipPath id="clockClip-10-4"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82c-13.17,40.55-38.94,75.42-72.69,99.98L200,200V0c43.94,0,84.56,14.18,117.56,38.2
 			c33.75,24.56,59.52,59.43,72.69,99.98C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-3">
+		<clipPath id="clockClip-10-3"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,21.58-3.43,42.35-9.75,61.82L200,200V0c43.94,0,84.56,14.18,117.56,38.2c33.75,24.56,59.52,59.43,72.69,99.98
 			C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-10-2">
+		<clipPath id="clockClip-10-2"  clipPathUnits="objectBoundingBox">
 			<path d="M390.25,138.18L200,200V0c43.94,0,84.56,14.18,117.56,38.2C351.31,62.76,377.08,97.63,390.25,138.18z" />
 		</clipPath>
-		<clipPath id="clockClip-10-1">
+		<clipPath id="clockClip-10-1"  clipPathUnits="objectBoundingBox">
 			<path d="M317.557,38.197C284.557,14.18,243.938,0,200,0v200L317.557,38.197z" />
 		</clipPath>
-		<clipPath id="clockClip-8-8">
+		<clipPath id="clockClip-8-8"  clipPathUnits="objectBoundingBox">
 			<circle cx="200" cy="200" r="200" />
 		</clipPath>
-		<clipPath id="clockClip-8-7">
+		<clipPath id="clockClip-8-7"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,55.23-22.39,105.23-58.58,141.42S255.23,400,200,400S94.77,377.61,58.58,341.42S0,255.23,0,200
 			C0,144.77,22.39,94.77,58.58,58.58L200,200V0c55.23,0,105.23,22.39,141.42,58.58C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-6">
+		<clipPath id="clockClip-8-6"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,55.23-22.39,105.23-58.58,141.42S255.23,400,200,400S94.77,377.61,58.58,341.42S0,255.23,0,200h200V0
 			c55.23,0,105.23,22.39,141.42,58.58C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-5">
+		<clipPath id="clockClip-8-5"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,55.23-22.39,105.23-58.58,141.42S255.23,400,200,400S94.77,377.61,58.58,341.42L200,200V0
 			c55.23,0,105.23,22.39,141.42,58.58C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-4">
+		<clipPath id="clockClip-8-4"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,55.23-22.39,105.23-58.58,141.42S255.23,400,200,400V0c55.23,0,105.23,22.39,141.42,58.58
 			C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-3">
+		<clipPath id="clockClip-8-3"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,55.23-22.39,105.23-58.58,141.42L200,200V0c55.23,0,105.23,22.39,141.42,58.58
 			C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-2">
+		<clipPath id="clockClip-8-2"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200H200V0c55.23,0,105.23,22.39,141.42,58.58C377.61,94.77,400,144.77,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-8-1">
+		<clipPath id="clockClip-8-1"  clipPathUnits="objectBoundingBox">
 			<path d="M341.421,58.579C305.229,22.386,255.229,0,200,0v200L341.421,58.579z" />
 		</clipPath>
-		<clipPath id="clockClip-6-6">
+		<clipPath id="clockClip-6-6"  clipPathUnits="objectBoundingBox">
 			<circle cx="200" cy="200" r="200" />
 		</clipPath>
-		<clipPath id="clockClip-6-5">
+		<clipPath id="clockClip-6-5"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01C338.65,359.78,274.02,400,200,400S61.35,359.78,26.77,300.01
 			C9.75,270.59,0,236.44,0,200s9.75-70.59,26.77-100.01L200,200V0c74.02,0,138.65,40.22,173.23,99.99
 			C390.25,129.41,400,163.56,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-6-4">
+		<clipPath id="clockClip-6-4"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01C338.65,359.78,274.02,400,200,400S61.35,359.78,26.77,300.01L200,200V0
 			c74.02,0,138.65,40.22,173.23,99.99C390.25,129.41,400,163.56,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-6-3">
+		<clipPath id="clockClip-6-3"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01C338.65,359.78,274.02,400,200,400V0c74.02,0,138.65,40.22,173.23,99.99
 			C390.25,129.41,400,163.56,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-6-2">
+		<clipPath id="clockClip-6-2"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01L200,200V0c74.02,0,138.65,40.22,173.23,99.99C390.25,129.41,400,163.56,400,200
 			z" />
 		</clipPath>
-		<clipPath id="clockClip-6-1">
+		<clipPath id="clockClip-6-1"  clipPathUnits="objectBoundingBox">
 			<path d="M373.229,99.986C338.646,40.215,274.021,0,200,0v200L373.229,99.986z" />
 		</clipPath>
-		<clipPath id="clockClip-5-5">
+		<clipPath id="clockClip-5-5"  clipPathUnits="objectBoundingBox">
 			<circle cx="200" cy="200" r="200" />
 		</clipPath>
-		<clipPath id="clockClip-5-4">
+		<clipPath id="clockClip-5-4"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,66.52-32.48,125.44-82.44,161.8c-33,24.02-73.62,38.2-117.56,38.2s-84.56-14.18-117.56-38.2
 			C32.48,325.44,0,266.52,0,200c0-21.58,3.43-42.35,9.75-61.82L200,200V0c88.88,0,164.21,57.98,190.25,138.18
 			C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-5-3">
+		<clipPath id="clockClip-5-3"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,66.52-32.48,125.44-82.44,161.8c-33,24.02-73.62,38.2-117.56,38.2s-84.56-14.18-117.56-38.2L200,200V0
 			c88.88,0,164.21,57.98,190.25,138.18C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-5-2">
+		<clipPath id="clockClip-5-2"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,66.52-32.48,125.44-82.44,161.8L200,200V0c88.88,0,164.21,57.98,190.25,138.18
 			C396.57,157.65,400,178.42,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-5-1">
+		<clipPath id="clockClip-5-1"  clipPathUnits="objectBoundingBox">
 			<path d="M390.248,138.185C364.207,57.985,288.881,0,200,0v200L390.248,138.185z" />
 		</clipPath>
-		<clipPath id="clockClip-4-4">
+		<clipPath id="clockClip-4-4"  clipPathUnits="objectBoundingBox">
 			<circle cx="200" cy="200" r="200" />
 		</clipPath>
-		<clipPath id="clockClip-4-3">
+		<clipPath id="clockClip-4-3"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,110.46-89.54,200-200,200S0,310.46,0,200h200V0C310.46,0,400,89.54,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-4-2">
+		<clipPath id="clockClip-4-2"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,110.46-89.54,200-200,200V0C310.46,0,400,89.54,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-4-1">
+		<clipPath id="clockClip-4-1"  clipPathUnits="objectBoundingBox">
 			<path d="M200,0v200h200C400,89.543,310.457,0,200,0z" />
 		</clipPath>
-		<clipPath id="clockClip-3-3">
+		<clipPath id="clockClip-3-3"  clipPathUnits="objectBoundingBox">
 			<circle cx="200" cy="200" r="200" />
 		</clipPath>
-		<clipPath id="clockClip-3-2">
+		<clipPath id="clockClip-3-2"  clipPathUnits="objectBoundingBox">
 			<path d="M400,200c0,36.44-9.75,70.59-26.77,100.01C338.65,359.78,274.02,400,200,400S61.35,359.78,26.77,300.01L200,200V0
 			C310.46,0,400,89.54,400,200z" />
 		</clipPath>
-		<clipPath id="clockClip-3-1">
+		<clipPath id="clockClip-3-1"  clipPathUnits="objectBoundingBox">
 			<path d="M200,0v200l173.229,100.014C390.252,270.593,400,236.436,400,200C400,89.543,310.457,0,200,0z" />
+		</clipPath>
+		<clipPath id="clockClip-2-1"  clipPathUnits="objectBoundingBox">
+			<path d="M400,200c0,110.46-89.54,200-200,200V0C310.46,0,400,89.54,400,200z"/>
 		</clipPath>
 	</defs>
 </svg>
